implementing new project structure

--- a/student-list/src/app/app.component.html
+++ b/student-list/src/app/app.component.html
@@ -1,4 +1,7 @@
 <div>
   <app-navbar />
-  <app-content-layout />
+  <app-layout-container>
+    <app-sidebar />
+    <app-main-content />
+  </app-layout-container>
 </div>
