--- a/student-list/src/styles.scss
+++ b/student-list/src/styles.scss
@@ -32,10 +32,15 @@ h6 {
   color: $font-color;
 }
 
-p {
+p,
+span {
   font-family: 'Sulphur Point', sans-serif;
   font-weight: 400;
   color: $font-color;
   font-size: 1.1rem;
   line-height: 1.1;
+}
+
+table {
+  border-collapse: collapse;
 }
