student list component

--- a/student-list/src/app/shared/ui/main-content/main-content.component.html
+++ b/student-list/src/app/shared/ui/main-content/main-content.component.html
@@ -1,35 +1,6 @@
 <main class="main-content">
   <section>
-    <h1>Main</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio sit ipsam maxime magni, animi neque porro ipsa,
-      laboriosam corporis aperiam nobis quam doloribus, qui cumque nisi quidem itaque pariatur unde!
-      Ut veniam temporibus, libero accusantium aperiam delectus. Debitis perspiciatis nam earum corporis aperiam
-      excepturi molestiae delectus laboriosam inventore, exercitationem aliquam distinctio facilis deserunt dolore
-      voluptas, labore repellat, odit iste autem?
-      Minima rem amet corrupti quia at dolor veritatis voluptate expedita laborum eveniet tenetur mollitia earum magni
-      ducimus, commodi excepturi hic quasi sunt delectus molestiae iure perspiciatis ipsam! Quam, ad aspernatur!
-      Ad corporis amet adipisci eaque, nam porro officiis magnam! Sequi voluptate quos placeat repellat atque. Eveniet
-      repudiandae dignissimos dicta ipsum laboriosam necessitatibus facere ab voluptatum ipsam, excepturi ullam, nulla
-      delectus?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio sit ipsam maxime magni, animi neque porro ipsa,
-      laboriosam corporis aperiam nobis quam doloribus, qui cumque nisi quidem itaque pariatur unde!
-      Ut veniam temporibus, libero accusantium aperiam delectus. Debitis perspiciatis nam earum corporis aperiam
-      excepturi molestiae delectus laboriosam inventore, exercitationem aliquam distinctio facilis deserunt dolore
-      voluptas, labore repellat, odit iste autem?
-      Minima rem amet corrupti quia at dolor veritatis voluptate expedita laborum eveniet tenetur mollitia earum magni
-      ducimus, commodi excepturi hic quasi sunt delectus molestiae iure perspiciatis ipsam! Quam, ad aspernatur!
-      Ad corporis amet adipisci eaque, nam porro officiis magnam! Sequi voluptate quos placeat repellat atque. Eveniet
-      repudiandae dignissimos dicta ipsum laboriosam necessitatibus facere ab voluptatum ipsam, excepturi ullam, nulla
-      delectus?</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odio sit ipsam maxime magni, animi neque porro ipsa,
-      laboriosam corporis aperiam nobis quam doloribus, qui cumque nisi quidem itaque pariatur unde!
-      Ut veniam temporibus, libero accusantium aperiam delectus. Debitis perspiciatis nam earum corporis aperiam
-      excepturi molestiae delectus laboriosam inventore, exercitationem aliquam distinctio facilis deserunt dolore
-      voluptas, labore repellat, odit iste autem?
-      Minima rem amet corrupti quia at dolor veritatis voluptate expedita laborum eveniet tenetur mollitia earum magni
-      ducimus, commodi excepturi hic quasi sunt delectus molestiae iure perspiciatis ipsam! Quam, ad aspernatur!
-      Ad corporis amet adipisci eaque, nam porro officiis magnam! Sequi voluptate quos placeat repellat atque. Eveniet
-      repudiandae dignissimos dicta ipsum laboriosam necessitatibus facere ab voluptatum ipsam, excepturi ullam, nulla
-      delectus?</p>
+    <h1>Students</h1>
+    <app-student-list />
   </section>
 </main>
