student-list component styles and functionality updates

--- a/student-list/src/app/student/feature/student-list/student-list.component.html
+++ b/student-list/src/app/student/feature/student-list/student-list.component.html
@@ -3,22 +3,25 @@
 </div>
 
 <ng-template #studentTable>
-  <table>
-    <thead>
-      <tr>
-        <th *ngFor="let header of headers ; let i=index" [ngClass]="i === 0 ? 'student-name-field' : undefined">
-          <h5>{{ header }}</h5>
-        </th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let student of students">
-        <td class="student-name-field">
-          <span>{{ student.getFullName() }}</span>
-        </td>
-        <td><span>{{ student.age }}</span></td>
-        <td><span>{{ student.isTopTen ? '🏆' : '🙈' }}</span></td>
-      </tr>
-    </tbody>
-  </table>
+  <section class="students-section">
+    <h1>Students</h1>
+    <table>
+      <thead>
+        <tr>
+          <th *ngFor="let header of headers ; let i=index" [ngClass]="i === 0 ? 'text-align-left' : undefined">
+            <h5>{{ header }}</h5>
+          </th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let student of students">
+          <td class="text-align-left">
+            <span>{{ student.getFullName() }}</span>
+          </td>
+          <td><span>{{ student.age }}</span></td>
+          <td><span class="top-ten-icon" appPulseAnimation>{{ student.isTopTen ? '🏆' : '🙈' }}</span></td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
 </ng-template>
