--- a/student-list/src/app/student/feature/student-list/student-list.component.scss
+++ b/student-list/src/app/student/feature/student-list/student-list.component.scss
@@ -2,10 +2,24 @@ td {
   text-align: center;
 }
 
-.student-name-field {
+td,
+th {
+  padding: 0.5rem 0.7rem;
+}
+
+.students-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 1.5rem;
+}
+
+.text-align-left {
   text-align: left;
 }
 
-td, th {
-  padding: 0.5rem 0.7rem;
+.top-ten-icon {
+  display: inline-block;
+  cursor: default;
 }
