update in the layouts layers

--- a/student-list/src/app/app.component.html
+++ b/student-list/src/app/app.component.html
@@ -2,6 +2,8 @@
   <app-navbar />
   <app-layout-container>
     <app-sidebar />
-    <app-main-content />
+    <app-main-content>
+      <app-student-list />
+    </app-main-content>
   </app-layout-container>
 </div>
