--- a/student-list/src/app/shared/ui/main-content/main-content.component.html
+++ b/student-list/src/app/shared/ui/main-content/main-content.component.html
@@ -1,6 +1,5 @@
 <main class="main-content">
   <section>
-    <h1>Students</h1>
-    <app-student-list />
+    <ng-content></ng-content>
   </section>
 </main>
