--- a/final-project/src/styles.scss
+++ b/final-project/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@import './assets/styles/custom-theme.scss';
+
+$primary-700: map-get($my-theme, color, primary, 700);
+$accent-500: map-get($my-theme, color, accent, 500);
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  color: $primary-700;
+}
+
+.secondary-text {
+  color: $accent-500
+}
