--- a/final-project/src/app/app.component.html
+++ b/final-project/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Proyecto Final, Parte 1</h1>
+<h1 class="mat-h1">
+  Estu<span class="secondary-text"
+    ><span class="salt-3">d</span>i<span class="salt-2">a</span></span
+  >ntes
+</h1>
+<p class=".mat-body-2">texto de parráfo</p>
