Adding the Students Module

--- a/final-project/src/app/app.component.html
+++ b/final-project/src/app/app.component.html
@@ -1,6 +1,4 @@
-<h1 class="mat-h1">
-  Estu<span class="secondary-text"
-    ><span class="salt-3">d</span>i<span class="salt-2">a</span></span
-  >ntes
-</h1>
-<p class=".mat-body-2">texto de parráfo</p>
+<app-main-container>
+  <app-students-section-title />
+  <p class=".mat-body-2">texto de parráfo</p>
+</app-main-container>
