--- a/final-project/src/app/main-container/main-container.component.scss
+++ b/final-project/src/app/main-container/main-container.component.scss
@@ -1,11 +1,7 @@
 .main-container {
   position: relative;
-  min-height: calc(100% - 2rem);
-  width: calc(100% - 2rem);
+  min-height: calc(100vh - 64px - 2rem);
+  width: calc(100vw - 2rem);
   overflow-x: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
   padding: 2rem 1rem 0px 1rem;
 }
