adding the student table component

--- a/final-project/src/app/app.component.html
+++ b/final-project/src/app/app.component.html
@@ -1,4 +1,4 @@
+<app-navbar />
 <app-main-container>
-  <app-students-section-title />
-  <p class=".mat-body-2">texto de parráfo</p>
+  <app-students-layout />
 </app-main-container>
