updates in the student title

--- a/final-project/src/app/students/ui/students-section-title/students-section-title.component.html
+++ b/final-project/src/app/students/ui/students-section-title/students-section-title.component.html
@@ -1,5 +1,5 @@
-<h1 class="mat-h1">
-  Estu<span class="secondary-text"
+<h1 class="mat-h1 primary-color">
+  Estu<span class="accent-color"
     ><span class="salt-3">d</span>i<span class="salt-2">a</span></span
   >ntes
 </h1>
