adding score property in the Student Interface

--- a/final-project/src/app/students/ui/students-table/students-table.component.html
+++ b/final-project/src/app/students/ui/students-table/students-table.component.html
@@ -50,6 +50,22 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="score">
+    <th
+      mat-header-cell
+      *matHeaderCellDef
+    >
+      Puntaje
+    </th>
+    <td
+      mat-cell
+      *matCellDef="let student"
+      class="center-text"
+    >
+      {{ student.score }}
+    </td>
+  </ng-container>
+
   <ng-container matColumnDef="isTopTen">
     <th
       mat-header-cell
