--- a/final-project/src/app/students/feature/students-table/students-table.component.html
+++ b/final-project/src/app/students/feature/students-table/students-table.component.html
@@ -1,12 +1,32 @@
 <table
   mat-table
-  [dataSource]="dataTable"
+  [dataSource]="dataSource"
+  matSort
   class="card-shape-pink-bg"
+  matSortActive="score"
+  matSortDirection="desc"
+  matSortDisableClear
 >
+  <ng-container matColumnDef="id">
+    <th
+      mat-header-cell
+      *matHeaderCellDef
+    >
+      ID
+    </th>
+    <td
+      mat-cell
+      *matCellDef="let student"
+    >
+      {{ student.id }}
+    </td>
+  </ng-container>
   <ng-container matColumnDef="fullName">
     <th
       mat-header-cell
       *matHeaderCellDef
+      mat-sort-header
+      sortActionDescription="Ordenar por nombre"
     >
       Nombre
     </th>
@@ -22,6 +42,8 @@
     <th
       mat-header-cell
       *matHeaderCellDef
+      mat-sort-header
+      sortActionDescription="Ordenar por edad"
     >
       Edad
     </th>
@@ -34,26 +56,12 @@
     </td>
   </ng-container>
 
-  <ng-container matColumnDef="course">
-    <th
-      mat-header-cell
-      *matHeaderCellDef
-    >
-      Curso
-    </th>
-    <td
-      mat-cell
-      *matCellDef="let student"
-      class="center-text"
-    >
-      {{ student.course }}
-    </td>
-  </ng-container>
-
   <ng-container matColumnDef="score">
     <th
       mat-header-cell
       *matHeaderCellDef
+      mat-sort-header
+      sortActionDescription="Ordenar por puntaje"
     >
       Puntaje
     </th>
