--- a/final-project/src/app/students/ui/students-layout/students-layout.component.scss
+++ b/final-project/src/app/students/ui/students-layout/students-layout.component.scss
@@ -8,5 +8,11 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    gap: 1rem;
+  }
+
+  section {
+    max-width: 440px;
+    margin-inline: auto;
   }
 }
