adding eventEmitter and StudentDialogComponent in the StudentsTable

--- a/final-project/src/app/students/feature/students-table/students-table.component.html
+++ b/final-project/src/app/students/feature/students-table/students-table.component.html
@@ -96,5 +96,9 @@
   <tr
     mat-row
     *matRowDef="let row; columns: displayedColumns"
-  ></tr>
+    (click)="openDialog(row)"
+    [matTooltip]="generateToolTip(row)"
+  >
+    >
+  </tr>
 </table>
