using an observable to emulate fetch data

--- a/final-project/src/app/app.component.html
+++ b/final-project/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar />
 <app-main-container>
-  <app-students-layout />
+  <app-students-view />
+  <app-footer />
 </app-main-container>
-<app-footer />
