leaving space to improve footer's position

--- a/final-project/src/app/footer/footer.component.html
+++ b/final-project/src/app/footer/footer.component.html
@@ -1,1 +1,3 @@
-<footer>Portal Estudiantes primera entrega 😁</footer>
+<footer>
+  <div class="content">Portal Estudiantes Preparando la Segunda entrega 😁</div>
+</footer>
