--- a/final-project/src/app/footer/footer.component.scss
+++ b/final-project/src/app/footer/footer.component.scss
@@ -1,13 +1,14 @@
 footer {
-  position: static;
+  position: absolute;
   bottom: 0;
-  left: 0;
+  margin-bottom: 0;
   width: 100%;
-  height: 60px;
-  padding-top: 2rem;
-  margin-top: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+
+  .content {
+    height: 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
