--- a/final-project/src/styles.scss
+++ b/final-project/src/styles.scss
@@ -11,11 +11,15 @@ $accent-700: map-get($my-theme, color, accent, 700);
 
 html,
 body {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+}
+
+body {
+  position: relative;
 }
 
 .primary-color {
