--- a/final-project/src/app/students/feature/students-view/students-view.component.html
+++ b/final-project/src/app/students/feature/students-view/students-view.component.html
@@ -5,7 +5,7 @@
       Para agregar a un nuevo estudiante solo debes completar el formulario a
       continuación:
     </p>
-    <app-students-form (newStudentEvent)="addStudent($event)" />
+    <app-students-form />
   </section>
   <main>
     <section *ngIf="isLoading; else studentsTable">
@@ -13,10 +13,7 @@
       <mat-spinner></mat-spinner>
     </section>
     <ng-template #studentsTable>
-      <app-students-table
-        [data]="studentsData"
-        (modifyStudent)="modifyStudent($event)"
-      />
+      <app-students-table />
     </ng-template>
   </main>
 </div>
