using the StudentService to populate table

--- a/final-project/src/app/students/feature/students-table/students-table.component.html
+++ b/final-project/src/app/students/feature/students-table/students-table.component.html
@@ -1,6 +1,7 @@
 <table
   mat-table
-  [dataSource]="dataSource"
+  *ngIf="matTableDataSource$ | async as students"
+  [dataSource]="students"
   matSort
   class="card-shape-pink-bg"
   matSortActive="score"
