--- a/final-project/src/app/students/feature/student-dialog/student-dialog.component.scss
+++ b/final-project/src/app/students/feature/student-dialog/student-dialog.component.scss
@@ -1,7 +1,19 @@
 .input-wrapper {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 1rem;
+}
+
+.btn-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.btn {
+  width: max-content;
 }
