--- a/final-project/src/app/students/feature/students-view/students-view.component.html
+++ b/final-project/src/app/students/feature/students-view/students-view.component.html
@@ -5,7 +5,7 @@
       Para agregar a un nuevo estudiante solo debes completar el formulario a
       continuación:
     </p>
-    <app-students-form />
+    <app-students-form class="app-student-form" />
   </section>
   <main>
     <section *ngIf="isLoading; else studentsTable">
