--- a/final-project/src/app/students/feature/students-form/students-form.component.scss
+++ b/final-project/src/app/students/feature/students-form/students-form.component.scss
@@ -1,7 +1,12 @@
 .input-wrapper {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   gap: 1rem;
+  width: 100%;
+}
+
+.student-input {
+  width: 100%;
 }
