Creating Auth Guard

--- a/final-project/src/app/login/feature/sign-in-form/sign-in-form.component.html
+++ b/final-project/src/app/login/feature/sign-in-form/sign-in-form.component.html
@@ -7,7 +7,7 @@
   </h1>
 
   <form
-    [formGroup]="loginForm"
+    [formGroup]="signInForm"
     class="input-wrapper"
   >
     <!-- User Name -->
