Creating sign up and sign in using the auth module

--- a/final-project/src/app/auth/feature/sign-in-form/sign-in-form.component.html
+++ b/final-project/src/app/auth/feature/sign-in-form/sign-in-form.component.html
@@ -52,6 +52,7 @@
       color="accent"
       class="custom-btn btn"
       (click)="handleSignUp()"
+      type="button"
     >
       Registrarme
     </button>
