--- a/final-project/src/app/navbar/navbar.component.html
+++ b/final-project/src/app/navbar/navbar.component.html
@@ -12,13 +12,15 @@
     <mat-icon class="primary-color">menu</mat-icon>
   </button>
 </mat-toolbar>
-<mat-drawer-container class="example-container">
+<mat-drawer-container class="app-drawer-wrapper">
   <mat-drawer
     mode="side"
     [opened]="openSideNav"
-    >Drawer content
+    class="app-drawer"
+  >
+    Drawer content
   </mat-drawer>
-  <mat-drawer-content>
+  <mat-drawer-content class="app-drawer-content">
     <ng-content></ng-content>
   </mat-drawer-content>
 </mat-drawer-container>
