--- a/final-project/src/app/navbar/navbar.component.html
+++ b/final-project/src/app/navbar/navbar.component.html
@@ -18,7 +18,10 @@
     [opened]="openSideNav"
     class="app-drawer"
   >
-    Drawer content
+    <nav>
+      <a routerLink="/">Inicio</a>
+      <a routerLink="/estudiantes">Estudiantes</a>
+    </nav>
   </mat-drawer>
   <mat-drawer-content class="app-drawer-content">
     <ng-content></ng-content>
