--- a/final-project/src/app/navbar/navbar.component.scss
+++ b/final-project/src/app/navbar/navbar.component.scss
@@ -32,7 +32,6 @@
   transition: all 500ms;
   &:hover {
     cursor: pointer;
-    transform: rotate(180deg);
     transition: all 500ms;
   }
   .mat-icon {
@@ -57,4 +56,18 @@
 
 .app-drawer-content {
   overflow-x: hidden;
+}
+
+nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 1rem;
+
+  a {
+    text-decoration: none;
+    color: #71a8d9;
+    font-weight: 400;
+  }
 }
