--- a/final-project/src/app/navbar/navbar.component.scss
+++ b/final-project/src/app/navbar/navbar.component.scss
@@ -12,7 +12,7 @@
 .navbar {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   gap: 1.5rem;
 }
@@ -70,4 +70,9 @@ nav {
     color: #71a8d9;
     font-weight: 400;
   }
+}
+
+.btn-container {
+  width: fit-content;
+  margin-left: auto;
 }
